# weekly-journal-digest

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
config/: recipients.example.json  recipients.json  sources.yaml
examples/: reviewed_digest.example.md
logs/2026-03-23/: candidate_digest-2026-03-23.json  reviewed_digest-2026-03-23.structured.html  reviewed_digest-2026-03-23.structured.md
logs/2026-03-30/: candidate_digest-2026-03-30.json  reviewed_digest-2026-03-30.structured.html  reviewed_digest-2026-03-30.structured.md
logs/2026-04-06/: candidate_digest-2026-04-06.json  reviewed_digest-2026-04-06.structured.md
logs/2026-04-13/: candidate_digest-2026-04-13.json  reviewed_digest-2026-04-13.structured.md  run_memory-2026-04-13.md
logs/2026-04-20/: candidate_digest-2026-04-20.json  reviewed_digest-2026-04-20.structured.md  reviewed_digest-2026-04-20.structured.preview.html  reviewed_digest-2026-04-20.structured.preview.txt
logs/2026-04-27/: candidate_digest-2026-04-27.json  reviewed_digest-2026-04-27.structured.md  reviewed_digest-2026-04-27.structured.preview.html  reviewed_digest-2026-04-27.structured.preview.txt
logs/2026-05-04/: candidate_digest-2026-05-04.json  reviewed_digest-2026-05-04.structured.md  reviewed_digest-2026-05-04.structured.preview.html  reviewed_digest-2026-05-04.structured.preview.txt
tests/: test_cli_env.py  test_digest.py  test_emailing.py  test_enrichment.py  test_filters.py  test_http_client.py  test_integration_flow.py  test_normalize.py  test_reconcile.py  test_reviewed_digest.py  test_send_digest.py
(+53 files in other folders)
